website: reposition TechGenie as automated AI agent builder agency

--- a/website/index.html
+++ b/website/index.html
@@ -3,52 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TechGenie — AI Systems for Revenue, Ops, and Markets</title>
-  <meta name="description" content="TechGenie builds practical AI systems for revenue operations, automation, and market intelligence." />
+  <title>TechGenie — Automated AI Agent Builder Agency</title>
+  <meta name="description" content="TechGenie builds automated AI agent systems for revenue, operations, and market execution with human approval guardrails." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="wrap nav">
     <div class="logo">TechGenie</div>
-    <a class="btn" href="mailto:techgeniexyz@gmail.com?subject=TechGenie%20project%20inquiry">Email Us</a>
+    <a class="btn" href="mailto:techgeniexyz@gmail.com?subject=AI%20Agent%20Discovery%20Call">Email Us</a>
   </header>
 
   <main>
     <section class="hero wrap">
-      <p class="eyebrow">Professional AI Engineering Studio</p>
-      <h1>AI Systems for Revenue, Ops, and Markets.</h1>
-      <p class="sub">We help businesses and operators automate high-friction workflows and ship production-ready AI tooling fast.</p>
-      <a class="btn primary" href="mailto:techgeniexyz@gmail.com?subject=TechGenie%20project%20inquiry">Start via Email</a>
+      <p class="eyebrow">Automated AI Agent Builder Agency</p>
+      <h1>We Build Automated AI Agents for Revenue, Ops, and Market Execution.</h1>
+      <p class="sub">TechGenie designs, ships, and maintains production-grade AI agent systems that handle repetitive business workflows safely — autonomous where safe, human-approved where critical.</p>
+      <a class="btn primary" href="mailto:techgeniexyz@gmail.com?subject=AI%20Agent%20Discovery%20Call">Book AI Agent Discovery</a>
     </section>
 
     <section class="wrap grid three">
       <article class="card">
-        <h3>Revenue/Ops Automation</h3>
-        <p>Lead routing, support workflows, reporting pipelines, and internal process automation.</p>
+        <h3>Revenue & Ops Agent Systems</h3>
+        <p>Lead intake agents, follow-up agents, support triage agents, and reporting agents that reduce manual overhead and increase response speed.</p>
       </article>
       <article class="card">
-        <h3>Research Tooling</h3>
-        <p>Custom market scanners, watch systems, and decision support workflows.</p>
+        <h3>Market Intelligence Agents</h3>
+        <p>Research agents that collect, filter, summarize, and alert on real-time market signals so teams act on signal, not noise.</p>
       </article>
       <article class="card">
-        <h3>Rapid MVP Builds</h3>
-        <p>Fast, scoped product builds for founders, teams, and bounty submissions.</p>
+        <h3>Rapid Agent MVP Builds</h3>
+        <p>From idea to deployable agent workflow in days, with clear milestones, integration-ready architecture, and handoff docs.</p>
       </article>
     </section>
 
     <section class="wrap card process">
-      <h2>How We Work</h2>
+      <h2>How Our Agent Architecture Works</h2>
       <ol>
-        <li>Brief and scope alignment</li>
-        <li>Execution sprint with clear milestones</li>
-        <li>Delivery, documentation, and handoff</li>
+        <li><b>Trigger Layer:</b> inboxes, forms, CRMs, dashboards, or APIs.</li>
+        <li><b>Agent Layer:</b> role-based agents execute repetitive tasks with clear boundaries.</li>
+        <li><b>Approval Layer:</b> high-impact actions require human sign-off before publishing/sending.</li>
+        <li><b>Monitoring Layer:</b> logs, alerts, retries, and KPI dashboards keep operations reliable.</li>
       </ol>
     </section>
 
     <section class="wrap cta card">
-      <h2>Let’s discuss your project.</h2>
-      <p>Email us with your objective, timeline, and constraints.</p>
-      <a class="btn primary" href="mailto:techgeniexyz@gmail.com?subject=TechGenie%20project%20inquiry">techgeniexyz@gmail.com</a>
+      <h2>Ready to design your AI agent stack?</h2>
+      <p>Send your workflow bottleneck, team size, and target outcome. We’ll reply with scope and timeline.</p>
+      <a class="btn primary" href="mailto:techgeniexyz@gmail.com?subject=Design%20My%20Agent%20Stack">techgeniexyz@gmail.com</a>
     </section>
   </main>
 
